add my-archetype